--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,9 @@ S3method(as.tags,shiny.appobj)
 S3method(as.tags,shiny.render.function)
 S3method(format,reactiveExpr)
 S3method(format,reactiveVal)
+S3method(knit_print,reactive)
+S3method(knit_print,shiny.appobj)
+S3method(knit_print,shiny.render.function)
 S3method(names,reactivevalues)
 S3method(print,key_missing)
 S3method(print,reactive)
@@ -134,9 +137,6 @@ export(isTruthy)
 export(isolate)
 export(key_missing)
 export(knit_print.html)
-export(knit_print.reactive)
-export(knit_print.shiny.appobj)
-export(knit_print.shiny.render.function)
 export(knit_print.shiny.tag)
 export(knit_print.shiny.tag.list)
 export(mainPanel)
@@ -148,6 +148,7 @@ export(modalButton)
 export(modalDialog)
 export(navbarMenu)
 export(navbarPage)
+export(navbarPageKristen)
 export(navlistPanel)
 export(nearPoints)
 export(need)
